# davaiops

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  _auto_config.sh  config.py  davaiops.service  ppmgr.sh  pyproject.toml  requirements.txt  run.py  run_debug.py  setup.cfg  setup.py  tox.ini  wsgi.py
davaiops/: __init__.py  _version.py  actor_inner_join.py  configurations.py  dev.py  flask_base.py  logg.py
davaiops/forms/: __init__.py  actor_innerjoin.py  posts.py  user.py
davaiops/model/: base.py  user.py
davaiops/routes/: __init__.py  admin.py  api.py  app.py  appgen.py  errors.py  koned.py  main.py  projects.py  user.py
davaiops/static/css/: main.css
davaiops/templates/: base.html  contact.html  index.html  koned.html  loading.html  render_datatable.html
davaiops/templates/auth/: account.html  login.html  register.html  reset_request.html  reset_token.html
davaiops/templates/projects/: actor_ij_entry.html  projects.html
docs/: EXTRA_SVC_SETUP.md  MAINTENANCE.md  SETUP.md  fail2ban--slack-notify.conf
