[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "davaiops"
version = '1.0.3'
description = "A Flask webapp for hosting projects."
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/davaiops'
packages = [
    { include = 'davaiops' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.1.1"
loguru = "0.6.0"
requests = ">=2.23.0"
Flask-Admin = "1.6.0"
Flask-Bcrypt = "^1.0.1"
Flask-Login = "^0.6.0"
Flask-Security = "^3.0.0"
Flask-SQLAlchemy = "^2.5.1"
itsdangerous = "2.1.2"
sqlalchemy = "^1.4.35"
twilio = "^7.9.3"
Werkzeug = "2.1.1"
WTForms = "3.0.1"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
